gateway/1.2/modules/ROOT/pages/flex-conn-rep-run.adoc
= Adding Flex Replicas in Connected Mode
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

[cols="1a,1a"]
|===
|image:install-linux-logo.png[20%,20%,xref="flex-conn-rep-run.adoc#add-a-flex-replica-as-a-linux-service"]
|image:install-docker-logo.png[25%,25%,xref="flex-conn-rep-run.adoc#add-a-flex-replica-in-a-docker-container"]

|xref:flex-conn-rep-run.adoc#add-a-flex-replica-as-a-linux-service[Add a Flex Replica as a Linux Service]
|xref:flex-conn-rep-run.adoc#add-a-flex-replica-in-a-docker-container[Add a Flex Replica in a Docker Container]
|===

include::partial$task-rep-run-flex-gateway.adoc[tags=add-flex-rep-byb;add-flex-rep-byb-conn;add-flex-rep1]

include::partial$task-reg-run-flex-gateway.adoc[tags=create-config-folder-file;config-content;linux-start-commands]

include::partial$task-rep-run-flex-gateway.adoc[tags=add-flex-rep2]

== Add a Flex Replica in a Docker Container

To add a Flex Replica in a Docker Container you must run the Flex Gateway start command using the file path and name of the same `registration.yaml` file created during registration. If you are running the container locally, you will also need to use a different port.

include::partial$task-reg-run-flex-gateway.adoc[tags=start-command]

Now if you check in Runtime Manager after clicking *Flex Gateway* in the left navigation, your Flex Gateway will have an additional replica listed. You may need to refresh the page.